tests/swift/input/prop_access.swift
// RUN: %not %neal %args | %check

class C : Bar {
  init() {
    foo() // CHECK: error:\d+ Explanation
  }
}
